feat: initial changes for 1.21.11

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -72,3 +72,8 @@ publishing {
 tasks.withType(JavaExec).configureEach {
     jvmArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
+
+// Disable failing when no tests are found
+test {
+    failOnNoDiscoveredTests = false
+}
