--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -10,7 +10,7 @@ base {
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(25)
 	}
 }
 
@@ -46,8 +46,8 @@ neoForge {
 			loadedMods = [mods."${mod_id}"]
 		}
 
-		data {
-			data()
+		serverData {
+            serverData()
 			gameDirectory = project.file('run/data')
 			programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
 
@@ -62,7 +62,7 @@ dependencies {
 
 processResources {
 	from project(":Common").sourceSets.main.resources
-	
+
 	filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
 		expand([
 			'version': project.version,
@@ -76,7 +76,7 @@ processResources {
 tasks.named('compileJava', JavaCompile).configure {
 	source(project(":Common").sourceSets.main.allSource)
 	options.encoding = 'UTF-8'
-	options.release = 21
+	options.release = 25
 }
 
 publishing {
