--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,11 @@ group                 = brightspark.asynclocator
 minecraft_version     = 1.21.11
 
 # NeoForge - https://maven.neoforged.net/releases/net/neoforged/neoforge/
-neoforge_version      = 21.10.64
+neoforge_version      = 21.11.38-beta
+
+# Parchment - https://parchmentmc.org/docs/getting-started
+parchment_version     = 2025.12.20
+parchment_mc_version  = 1.21.11
 
 # Fabric - https://fabricmc.net/develop/
 fabric_version        = 0.141.3+1.21.11
